parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    global

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PROGRAMA_OPTS PRINCIPAL
Rule 2     PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PRINCIPAL
Rule 3     PROGRAMA_OPTS -> DEC_V FUNCS
Rule 4     PROGRAMA_OPTS -> DEC_V
Rule 5     PROGRAMA_OPTS -> FUNCS
Rule 6     PRINCIPAL -> SEM_FILL_GOTO_ANYKIND SEM_MAIN_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE
Rule 7     DEC_V -> DEC_V var TIPO_SIMPLE : LISTA_VAR ;
Rule 8     DEC_V -> var TIPO_SIMPLE : LISTA_VAR ;
Rule 9     LISTA_VAR -> LISTA_VAR , VARIABLE_FIX
Rule 10    LISTA_VAR -> VARIABLE_FIX
Rule 11    TIPO_SIMPLE -> int
Rule 12    TIPO_SIMPLE -> float
Rule 13    TIPO_SIMPLE -> char
Rule 14    FUNCS -> FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
Rule 15    FUNCS -> FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
Rule 16    FUNCS -> FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
Rule 17    FUNCS -> FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
Rule 18    FUNCS -> FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
Rule 19    FUNCS -> FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
Rule 20    FUNCS -> FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
Rule 21    FUNCS -> FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
Rule 22    FUNC_TYPES -> char
Rule 23    FUNC_TYPES -> float
Rule 24    FUNC_TYPES -> int
Rule 25    FUNC_TYPES -> void
Rule 26    PARAMS -> PARAMS , TIPO_SIMPLE PARAM_NAME
Rule 27    PARAMS -> TIPO_SIMPLE PARAM_NAME
Rule 28    PARAM_NAME -> id
Rule 29    VARIABLE_FIX -> id [ cte_i ]
Rule 30    VARIABLE_FIX -> id
Rule 31    VARIABLE -> id [ EXPRESION ]
Rule 32    VARIABLE -> id
Rule 33    BLOQUE -> { LOOP_ESTATUTO return EXPRESION SEM_VERIFY_RETURN_FUNC ; }
Rule 34    BLOQUE -> { LOOP_ESTATUTO }
Rule 35    BLOQUE -> { return EXPRESION SEM_VERIFY_RETURN_FUNC ; }
Rule 36    BLOQUE -> { }
Rule 37    LOOP_ESTATUTO -> LOOP_ESTATUTO ESTATUTO
Rule 38    LOOP_ESTATUTO -> ESTATUTO
Rule 39    EXPRESION -> EXPRESION SEM_PENDING_LOGIC_OP and SEM_ADD_AND EXP_R SEM_PENDING_LOGIC_OP
Rule 40    EXPRESION -> EXPRESION SEM_PENDING_LOGIC_OP or SEM_ADD_OR EXP_R SEM_PENDING_LOGIC_OP
Rule 41    EXPRESION -> EXP_R
Rule 42    EXP_R -> EXP_A > SEM_ADD_GREATER_THAN EXP_A SEM_PENDING_REL_OP
Rule 43    EXP_R -> EXP_A < SEM_ADD_LESS_THAN EXP_A SEM_PENDING_REL_OP
Rule 44    EXP_R -> EXP_A equals SEM_ADD_EQUALS_TO EXP_A SEM_PENDING_REL_OP
Rule 45    EXP_R -> EXP_A not_equals SEM_ADD_NOT_EQUALS_TO EXP_A SEM_PENDING_REL_OP
Rule 46    EXP_R -> EXP_A
Rule 47    EXP_A -> EXP_A SEM_PENDING_EXPA_OP + SEM_ADD_PLUS TERMINO SEM_PENDING_EXPA_OP
Rule 48    EXP_A -> EXP_A SEM_PENDING_EXPA_OP minus SEM_ADD_MINUS TERMINO SEM_PENDING_EXPA_OP
Rule 49    EXP_A -> TERMINO
Rule 50    TERMINO -> TERMINO SEM_PENDING_TERMINO_OP * SEM_ADD_TIMES FACTOR SEM_PENDING_TERMINO_OP
Rule 51    TERMINO -> TERMINO SEM_PENDING_TERMINO_OP / SEM_ADD_DIVISION FACTOR SEM_PENDING_TERMINO_OP
Rule 52    TERMINO -> FACTOR
Rule 53    ESTATUTO -> ASIGNACION ;
Rule 54    ESTATUTO -> CONDICION
Rule 55    ESTATUTO -> WHILE
Rule 56    ESTATUTO -> FOR
Rule 57    ESTATUTO -> / SEM_MUST_BE_VOID_CALL LLAMADA ;
Rule 58    ESTATUTO -> LECTURA ;
Rule 59    ESTATUTO -> ESCRITURA ;
Rule 60    ESTATUTO -> LLAMADA_BI ;
Rule 61    FACTOR -> LLAMADA
Rule 62    FACTOR -> CTE
Rule 63    FACTOR -> VARIABLE
Rule 64    FACTOR -> ( SEM_ADD_FONDO_FALSO EXPRESION ) SEM_REMOVE_FONDO_FALSO
Rule 65    CTE -> cte_i
Rule 66    CTE -> cte_f
Rule 67    CTE -> cte_c
Rule 68    LLAMADA -> SEM_VERIFY_FUNC_CALL ( LLAMADA_OPTS SEM_RESET_PARAM_COUNT ) SEM_ADD_GOSUB
Rule 69    LLAMADA -> SEM_VERIFY_FUNC_CALL ( ) SEM_ADD_GOSUB
Rule 70    LLAMADA_OPTS -> LLAMADA_OPTS , EXPRESION SEM_VERIFY_PARAM
Rule 71    LLAMADA_OPTS -> EXPRESION SEM_VERIFY_PARAM
Rule 72    ASIGNACION -> VARIABLE = SEM_ADD_EQUALS EXPRESION SEM_PENDING_ASSIGNATION_OP
Rule 73    CONDICION -> if ( EXPRESION ) SEM_ADD_GOTOF then BLOQUE SEM_FILL_GOTO_ANYKIND
Rule 74    CONDICION -> if ( EXPRESION ) SEM_ADD_GOTOF then BLOQUE else SEM_ADD_GOTO_SIMPLE BLOQUE SEM_FILL_GOTO_ANYKIND
Rule 75    WHILE -> while SEM_ADD_COND_INDEX ( EXPRESION ) SEM_ADD_GOTOF do BLOQUE SEM_ADD_GOTO_SIMPLE SEM_FILL_GOTO_COND_INDEX
Rule 76    FOR -> for ASIGNACION to SEM_ADD_COND_INDEX EXPRESION SEM_ADD_GOTOV do BLOQUE SEM_ADD_GOTO_SIMPLE SEM_FILL_GOTO_COND_INDEX
Rule 77    LECTURA -> read ( LECTURA_OPTS )
Rule 78    LECTURA_OPTS -> LECTURA_OPTS , id
Rule 79    LECTURA_OPTS -> id
Rule 80    ESCRITURA -> write ( ESCRITURA_OPTS )
Rule 81    ESCRITURA_OPTS -> ESCRITURA_OPTS , SEM_ADD_PRINT_CTE_S
Rule 82    ESCRITURA_OPTS -> ESCRITURA_OPTS , EXPRESION SEM_ADD_PRINT
Rule 83    ESCRITURA_OPTS -> SEM_ADD_PRINT_CTE_S
Rule 84    ESCRITURA_OPTS -> EXPRESION SEM_ADD_PRINT
Rule 85    LLAMADA_BI -> POINT
Rule 86    LLAMADA_BI -> CIRCLE
Rule 87    LLAMADA_BI -> PENUP
Rule 88    LLAMADA_BI -> PENDOWN
Rule 89    LLAMADA_BI -> COLOR
Rule 90    LLAMADA_BI -> SIZE
Rule 91    LLAMADA_BI -> CLEAR
Rule 92    CLEAR -> clear ( )
Rule 93    POINT -> point ( EXPRESION , EXPRESION )
Rule 94    CIRCLE -> circle ( EXPRESION )
Rule 95    PENUP -> penup ( )
Rule 96    PENDOWN -> pendown ( )
Rule 97    COLOR -> color ( cte_s )
Rule 98    SIZE -> size ( EXPRESION )
Rule 99    SEM_GLOBAL_NAME -> id
Rule 100   SEM_MAIN_NAME -> main
Rule 101   SEM_FUNC_NAME -> id
Rule 102   SEM_ADD_FUNC -> <empty>
Rule 103   SEM_ADD_GLOBAL_VARIABLES -> <empty>
Rule 104   SEM_ADD_PLUS -> <empty>
Rule 105   SEM_ADD_MINUS -> <empty>
Rule 106   SEM_ADD_TIMES -> <empty>
Rule 107   SEM_ADD_DIVISION -> <empty>
Rule 108   SEM_ADD_EQUALS -> <empty>
Rule 109   SEM_ADD_FONDO_FALSO -> <empty>
Rule 110   SEM_REMOVE_FONDO_FALSO -> <empty>
Rule 111   SEM_ADD_GREATER_THAN -> <empty>
Rule 112   SEM_ADD_LESS_THAN -> <empty>
Rule 113   SEM_ADD_EQUALS_TO -> <empty>
Rule 114   SEM_ADD_NOT_EQUALS_TO -> <empty>
Rule 115   SEM_ADD_AND -> <empty>
Rule 116   SEM_ADD_OR -> <empty>
Rule 117   SEM_ADD_GOTOF -> <empty>
Rule 118   SEM_FILL_GOTO_ANYKIND -> <empty>
Rule 119   SEM_ADD_GOTO_SIMPLE -> <empty>
Rule 120   SEM_ADD_COND_INDEX -> <empty>
Rule 121   SEM_FILL_GOTO_COND_INDEX -> <empty>
Rule 122   SEM_ADD_GOTOV -> <empty>
Rule 123   SEM_ADD_GOTO_MAIN -> <empty>
Rule 124   SEM_ENDFUNC -> <empty>
Rule 125   SEM_VERIFY_FUNC_CALL -> id
Rule 126   SEM_VERIFY_PARAM -> <empty>
Rule 127   SEM_RESET_PARAM_COUNT -> <empty>
Rule 128   SEM_ADD_GOSUB -> <empty>
Rule 129   SEM_VERIFY_RETURN_FUNC -> <empty>
Rule 130   SEM_MUST_BE_VOID_CALL -> <empty>
Rule 131   SEM_ADD_PRINT -> <empty>
Rule 132   SEM_ADD_PRINT_CTE_S -> cte_s
Rule 133   SEM_PENDING_EXPA_OP -> <empty>
Rule 134   SEM_PENDING_TERMINO_OP -> <empty>
Rule 135   SEM_PENDING_ASSIGNATION_OP -> <empty>
Rule 136   SEM_PENDING_REL_OP -> <empty>
Rule 137   SEM_PENDING_LOGIC_OP -> <empty>

Terminals, with rules where they appear

(                    : 6 14 15 16 17 18 19 20 21 64 68 69 73 74 75 77 80 92 93 94 95 96 97 98
)                    : 6 14 15 16 17 18 19 20 21 64 68 69 73 74 75 77 80 92 93 94 95 96 97 98
*                    : 50
+                    : 47
,                    : 9 26 70 78 81 82 93
/                    : 51 57
:                    : 7 8
;                    : 1 2 7 8 33 35 53 57 58 59 60
<                    : 43
=                    : 72
>                    : 42
[                    : 29 31
]                    : 29 31
and                  : 39
char                 : 13 22
circle               : 94
clear                : 92
color                : 97
cte_c                : 67
cte_f                : 66
cte_i                : 29 65
cte_s                : 97 132
do                   : 75 76
else                 : 74
equals               : 44
error                : 
float                : 12 23
for                  : 76
global               : 
id                   : 28 29 30 31 32 78 79 99 101 125
if                   : 73 74
int                  : 11 24
main                 : 100
minus                : 48
module               : 14 15 16 17 18 19 20 21
not_equals           : 45
or                   : 40
pendown              : 96
penup                : 95
point                : 93
program              : 1 2
read                 : 77
return               : 33 35
size                 : 98
then                 : 73 74
to                   : 76
var                  : 7 8
void                 : 25
while                : 75
write                : 80
{                    : 33 34 35 36
}                    : 33 34 35 36

Nonterminals, with rules where they appear

ASIGNACION           : 53 76
BLOQUE               : 6 14 15 16 17 18 19 20 21 73 74 74 75 76
CIRCLE               : 86
CLEAR                : 91
COLOR                : 89
CONDICION            : 54
CTE                  : 62
DEC_V                : 3 4 7 16 17 20 21
ESCRITURA            : 59
ESCRITURA_OPTS       : 80 81 82
ESTATUTO             : 37 38
EXPRESION            : 31 33 35 39 40 64 70 71 72 73 74 75 76 82 84 93 93 94 98
EXP_A                : 42 42 43 43 44 44 45 45 46 47 48
EXP_R                : 39 40 41
FACTOR               : 50 51 52
FOR                  : 56
FUNCS                : 3 5 14 15 16 17
FUNC_TYPES           : 14 15 16 17 18 19 20 21
LECTURA              : 58
LECTURA_OPTS         : 77 78
LISTA_VAR            : 7 8 9
LLAMADA              : 57 61
LLAMADA_BI           : 60
LLAMADA_OPTS         : 68 70
LOOP_ESTATUTO        : 33 34 37
PARAMS               : 15 16 19 20 26
PARAM_NAME           : 26 27
PENDOWN              : 88
PENUP                : 87
POINT                : 85
PRINCIPAL            : 1 2
PROGRAMA             : 0
PROGRAMA_OPTS        : 1
SEM_ADD_AND          : 39
SEM_ADD_COND_INDEX   : 75 76
SEM_ADD_DIVISION     : 51
SEM_ADD_EQUALS       : 72
SEM_ADD_EQUALS_TO    : 44
SEM_ADD_FONDO_FALSO  : 64
SEM_ADD_FUNC         : 1 2 6 14 15 16 17 18 19 20 21
SEM_ADD_GLOBAL_VARIABLES : 6 14 15 16 17 18 19 20 21
SEM_ADD_GOSUB        : 68 69
SEM_ADD_GOTOF        : 73 74 75
SEM_ADD_GOTOV        : 76
SEM_ADD_GOTO_MAIN    : 1 2
SEM_ADD_GOTO_SIMPLE  : 74 75 76
SEM_ADD_GREATER_THAN : 42
SEM_ADD_LESS_THAN    : 43
SEM_ADD_MINUS        : 48
SEM_ADD_NOT_EQUALS_TO : 45
SEM_ADD_OR           : 40
SEM_ADD_PLUS         : 47
SEM_ADD_PRINT        : 82 84
SEM_ADD_PRINT_CTE_S  : 81 83
SEM_ADD_TIMES        : 50
SEM_ENDFUNC          : 14 15 16 17 18 19 20 21
SEM_FILL_GOTO_ANYKIND : 6 73 74
SEM_FILL_GOTO_COND_INDEX : 75 76
SEM_FUNC_NAME        : 14 15 16 17 18 19 20 21
SEM_GLOBAL_NAME      : 1 2
SEM_MAIN_NAME        : 6
SEM_MUST_BE_VOID_CALL : 57
SEM_PENDING_ASSIGNATION_OP : 72
SEM_PENDING_EXPA_OP  : 47 47 48 48
SEM_PENDING_LOGIC_OP : 39 39 40 40
SEM_PENDING_REL_OP   : 42 43 44 45
SEM_PENDING_TERMINO_OP : 50 50 51 51
SEM_REMOVE_FONDO_FALSO : 64
SEM_RESET_PARAM_COUNT : 68
SEM_VERIFY_FUNC_CALL : 68 69
SEM_VERIFY_PARAM     : 70 71
SEM_VERIFY_RETURN_FUNC : 33 35
SIZE                 : 90
TERMINO              : 47 48 49 50 51
TIPO_SIMPLE          : 7 8 26 27
VARIABLE             : 63 72
VARIABLE_FIX         : 9 10
WHILE                : 55

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PROGRAMA_OPTS PRINCIPAL
    (2) PROGRAMA -> . SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PRINCIPAL
    (123) SEM_ADD_GOTO_MAIN -> .

    program         reduce using rule 123 (SEM_ADD_GOTO_MAIN -> .)

    PROGRAMA                       shift and go to state 1
    SEM_ADD_GOTO_MAIN              shift and go to state 2

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> SEM_ADD_GOTO_MAIN . program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PROGRAMA_OPTS PRINCIPAL
    (2) PROGRAMA -> SEM_ADD_GOTO_MAIN . program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PRINCIPAL

    program         shift and go to state 3


state 3

    (1) PROGRAMA -> SEM_ADD_GOTO_MAIN program . SEM_GLOBAL_NAME SEM_ADD_FUNC ; PROGRAMA_OPTS PRINCIPAL
    (2) PROGRAMA -> SEM_ADD_GOTO_MAIN program . SEM_GLOBAL_NAME SEM_ADD_FUNC ; PRINCIPAL
    (99) SEM_GLOBAL_NAME -> . id

    id              shift and go to state 5

    SEM_GLOBAL_NAME                shift and go to state 4

state 4

    (1) PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME . SEM_ADD_FUNC ; PROGRAMA_OPTS PRINCIPAL
    (2) PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME . SEM_ADD_FUNC ; PRINCIPAL
    (102) SEM_ADD_FUNC -> .

    ;               reduce using rule 102 (SEM_ADD_FUNC -> .)

    SEM_ADD_FUNC                   shift and go to state 6

state 5

    (99) SEM_GLOBAL_NAME -> id .

    ;               reduce using rule 99 (SEM_GLOBAL_NAME -> id .)


state 6

    (1) PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC . ; PROGRAMA_OPTS PRINCIPAL
    (2) PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC . ; PRINCIPAL

    ;               shift and go to state 7


state 7

    (1) PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; . PROGRAMA_OPTS PRINCIPAL
    (2) PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; . PRINCIPAL
    (3) PROGRAMA_OPTS -> . DEC_V FUNCS
    (4) PROGRAMA_OPTS -> . DEC_V
    (5) PROGRAMA_OPTS -> . FUNCS
    (6) PRINCIPAL -> . SEM_FILL_GOTO_ANYKIND SEM_MAIN_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE
    (7) DEC_V -> . DEC_V var TIPO_SIMPLE : LISTA_VAR ;
    (8) DEC_V -> . var TIPO_SIMPLE : LISTA_VAR ;
    (14) FUNCS -> . FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (15) FUNCS -> . FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (16) FUNCS -> . FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (17) FUNCS -> . FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (18) FUNCS -> . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (19) FUNCS -> . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (20) FUNCS -> . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (21) FUNCS -> . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (118) SEM_FILL_GOTO_ANYKIND -> .
    (22) FUNC_TYPES -> . char
    (23) FUNC_TYPES -> . float
    (24) FUNC_TYPES -> . int
    (25) FUNC_TYPES -> . void

    var             shift and go to state 13
    main            reduce using rule 118 (SEM_FILL_GOTO_ANYKIND -> .)
    char            shift and go to state 15
    float           shift and go to state 16
    int             shift and go to state 17
    void            shift and go to state 18

    PROGRAMA_OPTS                  shift and go to state 8
    PRINCIPAL                      shift and go to state 9
    DEC_V                          shift and go to state 10
    FUNCS                          shift and go to state 11
    SEM_FILL_GOTO_ANYKIND          shift and go to state 12
    FUNC_TYPES                     shift and go to state 14

state 8

    (1) PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PROGRAMA_OPTS . PRINCIPAL
    (6) PRINCIPAL -> . SEM_FILL_GOTO_ANYKIND SEM_MAIN_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE
    (118) SEM_FILL_GOTO_ANYKIND -> .

    main            reduce using rule 118 (SEM_FILL_GOTO_ANYKIND -> .)

    PRINCIPAL                      shift and go to state 19
    SEM_FILL_GOTO_ANYKIND          shift and go to state 12

state 9

    (2) PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PRINCIPAL .

    $end            reduce using rule 2 (PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PRINCIPAL .)


state 10

    (3) PROGRAMA_OPTS -> DEC_V . FUNCS
    (4) PROGRAMA_OPTS -> DEC_V .
    (7) DEC_V -> DEC_V . var TIPO_SIMPLE : LISTA_VAR ;
    (14) FUNCS -> . FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (15) FUNCS -> . FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (16) FUNCS -> . FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (17) FUNCS -> . FUNCS FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (18) FUNCS -> . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (19) FUNCS -> . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (20) FUNCS -> . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (21) FUNCS -> . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (22) FUNC_TYPES -> . char
    (23) FUNC_TYPES -> . float
    (24) FUNC_TYPES -> . int
    (25) FUNC_TYPES -> . void

    main            reduce using rule 4 (PROGRAMA_OPTS -> DEC_V .)
    var             shift and go to state 21
    char            shift and go to state 15
    float           shift and go to state 16
    int             shift and go to state 17
    void            shift and go to state 18

    FUNCS                          shift and go to state 20
    FUNC_TYPES                     shift and go to state 14

state 11

    (5) PROGRAMA_OPTS -> FUNCS .
    (14) FUNCS -> FUNCS . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (15) FUNCS -> FUNCS . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (16) FUNCS -> FUNCS . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (17) FUNCS -> FUNCS . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (22) FUNC_TYPES -> . char
    (23) FUNC_TYPES -> . float
    (24) FUNC_TYPES -> . int
    (25) FUNC_TYPES -> . void

    main            reduce using rule 5 (PROGRAMA_OPTS -> FUNCS .)
    char            shift and go to state 15
    float           shift and go to state 16
    int             shift and go to state 17
    void            shift and go to state 18

    FUNC_TYPES                     shift and go to state 22

state 12

    (6) PRINCIPAL -> SEM_FILL_GOTO_ANYKIND . SEM_MAIN_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE
    (100) SEM_MAIN_NAME -> . main

    main            shift and go to state 24

    SEM_MAIN_NAME                  shift and go to state 23

state 13

    (8) DEC_V -> var . TIPO_SIMPLE : LISTA_VAR ;
    (11) TIPO_SIMPLE -> . int
    (12) TIPO_SIMPLE -> . float
    (13) TIPO_SIMPLE -> . char

    int             shift and go to state 26
    float           shift and go to state 27
    char            shift and go to state 28

    TIPO_SIMPLE                    shift and go to state 25

state 14

    (18) FUNCS -> FUNC_TYPES . module SEM_FUNC_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (19) FUNCS -> FUNC_TYPES . module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (20) FUNCS -> FUNC_TYPES . module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (21) FUNCS -> FUNC_TYPES . module SEM_FUNC_NAME SEM_ADD_FUNC ( ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC

    module          shift and go to state 29


state 15

    (22) FUNC_TYPES -> char .

    module          reduce using rule 22 (FUNC_TYPES -> char .)


state 16

    (23) FUNC_TYPES -> float .

    module          reduce using rule 23 (FUNC_TYPES -> float .)


state 17

    (24) FUNC_TYPES -> int .

    module          reduce using rule 24 (FUNC_TYPES -> int .)


state 18

    (25) FUNC_TYPES -> void .

    module          reduce using rule 25 (FUNC_TYPES -> void .)


state 19

    (1) PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PROGRAMA_OPTS PRINCIPAL .

    $end            reduce using rule 1 (PROGRAMA -> SEM_ADD_GOTO_MAIN program SEM_GLOBAL_NAME SEM_ADD_FUNC ; PROGRAMA_OPTS PRINCIPAL .)


state 20

    (3) PROGRAMA_OPTS -> DEC_V FUNCS .
    (14) FUNCS -> FUNCS . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (15) FUNCS -> FUNCS . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (16) FUNCS -> FUNCS . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (17) FUNCS -> FUNCS . FUNC_TYPES module SEM_FUNC_NAME SEM_ADD_FUNC ( ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (22) FUNC_TYPES -> . char
    (23) FUNC_TYPES -> . float
    (24) FUNC_TYPES -> . int
    (25) FUNC_TYPES -> . void

    main            reduce using rule 3 (PROGRAMA_OPTS -> DEC_V FUNCS .)
    char            shift and go to state 15
    float           shift and go to state 16
    int             shift and go to state 17
    void            shift and go to state 18

    FUNC_TYPES                     shift and go to state 22

state 21

    (7) DEC_V -> DEC_V var . TIPO_SIMPLE : LISTA_VAR ;
    (11) TIPO_SIMPLE -> . int
    (12) TIPO_SIMPLE -> . float
    (13) TIPO_SIMPLE -> . char

    int             shift and go to state 26
    float           shift and go to state 27
    char            shift and go to state 28

    TIPO_SIMPLE                    shift and go to state 30

state 22

    (14) FUNCS -> FUNCS FUNC_TYPES . module SEM_FUNC_NAME SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (15) FUNCS -> FUNCS FUNC_TYPES . module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (16) FUNCS -> FUNCS FUNC_TYPES . module SEM_FUNC_NAME SEM_ADD_FUNC ( PARAMS ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC
    (17) FUNCS -> FUNCS FUNC_TYPES . module SEM_FUNC_NAME SEM_ADD_FUNC ( ) DEC_V SEM_ADD_GLOBAL_VARIABLES BLOQUE SEM_ENDFUNC

    module          shift and go to state 31


state 23

    (6) PRINCIPAL -> SEM_FILL_GOTO_ANYKIND SEM_MAIN_NAME . SEM_ADD_FUNC ( ) SEM_ADD_GLOBAL_VARIABLES BLOQUE
    (102) SEM_ADD_FUNC -> .

    (               reduce using rule 102 (SEM_ADD_FUNC -> .)

    SEM_ADD_FUNC                   shift and go to state 32

state 24

    (100) SEM_MAIN_NAME -> main .

    (               reduce using rule 100 (SEM_MAIN_NAME -> main .)


state 25

    (8) DEC_V -> var TIPO_SIMPLE . : LISTA_VAR ;

    :               shift and go to state 33


state 26

    (11) TIPO_SIMPLE -> int .
